--- a/oddfuture.css
+++ b/oddfuture.css
@@ -1,1 +1,64 @@
+body {
+	width: 100vw;
+	height: 100vh;
+	margin: 0	
+}
 
+.container1 {
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	flex-wrap: wrap;
+}
+.container2 {
+	width: 100%;
+	height: 30%;
+	background-image:yellow;
+}
+.container3 {
+	width: 100%;
+	height: 30%;
+	background-color: blue;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.block1 {
+	width: 50%;
+	height: 55%;
+	background-color: pink;
+}
+
+.block2 {
+	width: 50%;
+	height: 55%;
+	background-color: pink;
+	
+}
+
+.block3 {
+	width: 50%;
+	height: 55%;
+	background-color: white;
+}
+
+.block4 {
+	width: 50%;
+	height: 55%;
+	background-color: white;
+}
+
+@media screen and (max-width:800px) {
+.container1 {
+	display: block;
+}
+.container2 {
+	width: 100%;
+	height: 50%;
+}
+.container3 {
+	width: 100%;
+	height: 50%;	
+}
+
+}
