--- a/oddfuture.css
+++ b/oddfuture.css
@@ -1,5 +1,5 @@
 body {
-	width: 100vw;
+  width: 100vw;
 	height: 100vh;
 	margin: 0	
 }
@@ -7,7 +7,7 @@ body {
 .container1 {
 	width: 100%;
 	height: 100%;
-	background-color: black;
+	background-color: #1AC2EA;
 	flex-wrap: wrap;
 }
 .container2 {
@@ -23,29 +23,30 @@ body {
 	flex-wrap: wrap;
 }
 
+
 .block1 {
 	width: 50%;
 	height: 55%;
-	background-color: pink;
+	background-color: yellow;
 }
 
 .block2 {
 	width: 50%;
 	height: 55%;
-	background-color: pink;
+	background-color: yellow;
 	
 }
 
 .block3 {
 	width: 50%;
 	height: 55%;
-	background-color: white;
+	background-color: red;
 }
 
 .block4 {
 	width: 50%;
 	height: 55%;
-	background-color: white;
+	background-color: red;
 }
 
 @media screen and (max-width:800px) {
@@ -59,6 +60,4 @@ body {
 .container3 {
 	width: 100%;
 	height: 50%;	
-}
-
 }
